# avi-device

./: .gitignore  Cargo.toml  LICENSE  README.md
embedded/: API_REFERENCE.md  Cargo.toml  build.sh  header.h
embedded/src/: c_api.rs  lib.rs
esp32-avi-device/: README.md
examples/: audio_chat.rs  context_sync.rs  device_chat.rs  device_context.rs  device_pubsub.rs  device_query.rs  device_stream.rs  discovery_monitor.rs  gateway_node.rs  gateway_with_pubsub.rs  resilient_pubsub.rs  simple_node.rs  simulated_mcu.rs  simulated_mcu_pubsub.rs
p2p/: Cargo.toml
p2p/src/: behaviour.rs  bridge.rs  command.rs  config.rs  error.rs  events.rs  lib.rs  node.rs  runtime.rs
p2p/src/protocols/: context.rs  stream.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: bridge.rs  capability.rs  device.rs  lib.rs  node.rs  query.rs  runtime.rs  stream.rs
