[package]
name = "avi-p2p-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
avi-p2p-protocol = { path = "../protocol" }
serde = { version = "1.0", default-features = false }
postcard = { version = "1.0", default-features = false }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.3" }
heapless = "0.8"
linked_list_allocator = { version = "0.10.5", features = ["const_mut_refs"] }

[features]
default = ["c-api"]
c-api = []

[lib]
crate-type = ["staticlib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
